--- a/event_manager/Gemfile
+++ b/event_manager/Gemfile
@@ -1,5 +1,3 @@
-# frozen_string_literal: true
-
 source 'https://rubygems.org'
 
-gem 'google-apis-generator', '0.11.1'
+gem 'rspec', '3.12.0', group: :development
